--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="container mt-3">
   <h2>Circle</h2>
   <p>The .rounded-circle class shapes the image to a circle:</p>            
-  <img src="cinqueterre.jpg" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
+  <img src="50c7b96d-36e5-4f61-bdbc-73b247011954.jpg" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
 </div>
 
 </body>
