--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
         <a class="nav-link" href="#">Link 3</a>
       </li>
     </ul>
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap ของฉัน</title>
-  </head>
-  <body>
-  <h1>Hello, Bootstrap!</h1>
-  </body>
+  </div>
+</nav>
+
+<div class="container-fluid mt-3">
+  <h3>Basic Navbar Example</h3>
+  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+  <p>The navbar-expand-xxl|xl|lg|md|sm class determines when the navbar should stack vertically (on xxlarge, extra large, large, medium or small screens).</p>
+</div>
+
+</body>
 </html>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,6 +72,7 @@
 
 </body>
 </html>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
