--- a/index.html
+++ b/index.html
@@ -92,3 +92,12 @@
 
 </body>
 </html>
+<div class="container mt-3">
+  <h2>Aligning images</h2>
+  <p>Use the float classes to float the image to the left or to the right:</p> 
+  <img src="paris.jpg" class="float-start" alt="Paris" width="304" height="236"> 
+  <img src="paris.jpg" class="float-end" alt="Paris" width="304" height="236"> 
+</div>
+
+</body>
+</html>
