--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+  </body>
+</html>
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
