--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+  
+</body>
+</html>
 
 <div class="container mt-3">
   <h2>Stacked form</h2>
